src/css/index.css
@import "https://fonts.googleapis.com/earlyaccess/mplus1p.css";
@import 'https://fonts.googleapis.com/css?family=Kelly+Slab';

body {
    font-family: "Mplus 1p";
    background: #fcffff;
    max-width: 1200px;
    margin: 0 auto;
    font-size: 1.1em;
}

#header {
    margin-top: 5em;
    margin-bottom: 5em;
}

.container {
    margin-top: 1em;
    margin-bottom: 1em;
}

footer {
    text-align: center;
}

/* Over Ride */

.row-content.buffer {
    padding-right: 15%;
    padding-left: 15%;
}

/* For TopPage */

.top {
    text-align: center;
    margin-top: 0em;
    margin-bottom: 5em;
}

.day {
    display: block;
    text-align: center;
    margin-bottom: 0.5em;
}

.day h1 {
    display: block;
    text-decoration: none;
    color: #111;
    margin-top: 0.2em;
}

.day a {
    text-decoration: none;
    color: #111;
}

.day a:hover {
    text-decoration: underline;
}

.column.last {
    margin-top: 2.5em;
}


/* For Daily Pages*/

p {
    margin-bottom: 0.5em;
}

.info {
    text-align: center;
}

.info h1 {
    display: block;
    border-bottom: 1px solid black;
    color: black;
    padding: 10px;
    font-size: 2.5em;
    margin-top: 0.5em;
    margin-bottom: 0.5em;
}

time {
    font-family: 'Kelly Slab';
    display: inline-block;
    text-decoration: underline;
    padding: 0.3em 0.5em;
    font-size: 2em;
    font-weight: 600;
    margin: 0;
}

.info .buttons {
    text-align: right;
}

.daily p {
    padding-left: 1em;
    text-indent: 1em;
}

.daily h1 {
    margin-top: 0.5em;
    margin-bottom: 0.5em;
}

.daily h2 {
    margin-top: 0.5em;
    margin-bottom: 0.5em;
}

.daily h3 {
    margin-top: 0.5em;
    margin-bottom: 0.5em;
}

.signature {
    margin-top: 1.5em;
    margin-bottom: 1.5em;
    text-align: right;
}

.center {
    text-align: center;
}

code,
tt {
    margin: 0 2px;
    padding: 0 5px;
    white-space: nowrap;
    border: 1px solid #eaeaea;
    background-color: #f8f8f8;
    border-radius: 3px;
}

